docs-archive/apache-airflow-providers-edge3/1.5.0/_sources/_api/airflow/providers/edge3/models/edge_job/index.rst.txt
airflow.providers.edge3.models.edge_job
=======================================

.. py:module:: airflow.providers.edge3.models.edge_job


Classes
-------

.. autoapisummary::

   airflow.providers.edge3.models.edge_job.EdgeJobModel


Module Contents
---------------

.. py:class:: EdgeJobModel(dag_id, task_id, run_id, map_index, try_number, state, queue, concurrency_slots, command, queued_dttm = None, edge_worker = None, last_update = None)

   Bases: :py:obj:`airflow.models.base.Base`, :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   A job which is queued, waiting or running on a Edge Worker.

   Each tuple in the database represents and describes the state of one job.


   .. py:attribute:: __tablename__
      :value: 'edge_job'



   .. py:attribute:: dag_id
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: task_id
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: run_id
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: map_index
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: try_number
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: state
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: queue
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: concurrency_slots
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: command
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: queued_dttm
      :type:  sqlalchemy.orm.Mapped[datetime.datetime | None]


   .. py:attribute:: edge_worker
      :type:  sqlalchemy.orm.Mapped[str | None]


   .. py:attribute:: last_update
      :type:  sqlalchemy.orm.Mapped[datetime.datetime | None]


   .. py:attribute:: __table_args__


   .. py:property:: key


   .. py:property:: last_update_t
      :type: float



