docs-archive/apache-airflow-providers-edge3/5.0.0/_sources/_api/airflow/providers/edge3/models/edge_job/index.rst.txt
airflow.providers.edge3.models.edge_job
=======================================

.. py:module:: airflow.providers.edge3.models.edge_job


Classes
-------

.. autoapisummary::

   airflow.providers.edge3.models.edge_job.EdgeJobModel


Functions
---------

.. autoapisummary::

   airflow.providers.edge3.models.edge_job.build_job_key


Module Contents
---------------

.. py:function:: build_job_key(dag_id, task_id, run_id, try_number, map_index)

   Build the key the executor layer uses for a job row.

   A row is a callback only if it has the full identity ``queue_workload()`` writes for callbacks, since
   ``ExecuteCallback`` is a valid Dag id. A task row maps to the ``airflow.models`` ``TaskInstanceKey``,
   not the ``airflow.sdk`` one, because ``BaseExecutor`` dispatches on it with ``isinstance``.


.. py:class:: EdgeJobModel(dag_id, task_id, run_id, map_index, try_number, state, queue, concurrency_slots, command, queued_dttm = None, edge_worker = None, last_update = None, team_name = None)

   Bases: :py:obj:`airflow.providers.edge3.models.edge_base.Base`, :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   A job which is queued, waiting or running on a Edge Worker.

   Each tuple in the database represents and describes the state of one job.


   .. py:attribute:: __tablename__
      :value: 'edge_job'



   .. py:attribute:: dag_id
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: task_id
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: run_id
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: map_index
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: try_number
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: state
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: queue
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: concurrency_slots
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: command
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: queued_dttm
      :type:  sqlalchemy.orm.Mapped[datetime.datetime | None]


   .. py:attribute:: edge_worker
      :type:  sqlalchemy.orm.Mapped[str | None]


   .. py:attribute:: last_update
      :type:  sqlalchemy.orm.Mapped[datetime.datetime | None]


   .. py:attribute:: team_name
      :type:  sqlalchemy.orm.Mapped[str | None]


   .. py:attribute:: __table_args__


   .. py:property:: key
      :type: airflow.models.taskinstancekey.TaskInstanceKey | airflow.models.callback.CallbackKey


      Key of the job as the executor layer knows it.



   .. py:property:: last_update_t
      :type: float



